[package]
name = "scalpel"
version = "0.1.0"
license = "MIT or Apache-2.0"
readme = "README.md"
keywords = ["network-programming::packet-parsing"]
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
exclude = ["**/*.pcap", "**/perf.data*", "**/flamegraph.svg"]
description = "Packet dissection and sculpting in Rust."
repository = "https://github.com/gabhijit/scalpel"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = {version = "0.4", features = ["serde"]}
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
erased-serde = "0.3"
pyo3 = { version = "0.14.5", features = ["extension-module"], optional=true}

[dev-dependencies]
criterion = "0.3"

# Required by `cargo flamegraph`
[profile.bench]
debug = true

[[bench]]
name = "ip_dissect"
harness = false


[[bench]]
name = "ipv6_display"
harness = false

[[bench]]
name = "dns"
harness = false


[build-dependencies]
syn = { version = "1.0", features = ["full"]}
walkdir = "2"

[features]
python-bindings = ['pyo3']
