[package]
name = "scalpel"
version = "0.3.0"
license-file = "LICENSE"
readme = "README.md"
keywords = ["Wireshark", "pcap", "packet", "packet-parsing"]
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
exclude = ["**/*.pcap", "**/perf.data*", "**/flamegraph.svg"]
description = "Packet dissection and sculpting in Rust."
repository = "https://github.com/gabhijit/scalpel"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = {version = "0.4", features = ["serde"]}
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
erased-serde = "0.4"
pyo3 = { version = "0.20", features = ["extension-module"], optional=true}
log =  { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"
pcap = { version = "1.1"}
clap = { version = "4.0" , features = ["derive"] }

# Required by `cargo flamegraph`
[profile.bench]
debug = true

[[bench]]
name = "ip_dissect"
harness = false


[[bench]]
name = "ipv6_display"
harness = false

[[bench]]
name = "dns"
harness = false

[[example]]
name = "packet_json"
path = "examples/packet_as_json.rs"

[[example]]
name = "pcap"
path = "examples/pcap_example.rs"

[build-dependencies]
syn = { version = "1.0", features = ["full"]}
walkdir = "2"

[features]
python-bindings = ['pyo3']
logging = ["log"]
