[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "scalpel-python-bindings"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Developers",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Rust",
	"Topic :: System :: Networking",
]

dependencies = ["cffi"]
